# mmap-io

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  REPS.md  clippy.toml  deny.toml
.github/workflows/: audit.yml  bench-regression.yml  ci.yml  semver-checks.yml
benches/: mmap_bench.rs
docs/: API.md  PERFORMANCE.md  SAFETY.md
examples/: 01_read_a_file.rs  02_create_and_write.rs  03_segment_views.rs  04_atomic_counter.rs  05_log_appender.rs  06_chunked_processing.rs  07_watch_for_changes.rs  08_huge_pages_simulation.rs  09_async_writes.rs  10_ipc_shared_state.rs  critical_features_demo.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: atomic_view.rs  bounds_checks.rs  read_into.rs  update_region.rs
src/: advise.rs  atomic.rs  flush.rs  iterator.rs  lib.rs  lock.rs  manager.rs  mmap.rs  segment.rs  utils.rs  watch.rs
tests/: additional_tests.rs  atomic_view_resize_safety.rs  basic.rs  critical_features_test.rs  ergonomic_api.rs  feature_integration.rs  flush_range_accumulator.rs  proptest_atomic.rs  proptest_bounds.rs  proptest_flush.rs  segment_after_resize.rs  time_based_flush.rs  v0_9_11_additions.rs  watch_native.rs
