[package]
name = "mmap-io"
version = "0.9.6"
edition = "2021"
rust-version = "1.75"
readme = "README.md"
license = "Apache-2.0"
publish = true
description = "High-performance, async-ready memory-mapped file I/O library for Rust. Supports fast segment-based loading, updates, and persistence. Designed for database engines, game runtimes, and real-time applications."
keywords = [
    "mmap", 
    "memory-mapped", 
    "file-io", 
    "async",
    "database"
]
categories = [
    "filesystem", 
    "data-structures", 
    "asynchronous", 
    "database-implementations"
]
homepage = "https://github.com/jamesgober/mmap-io"
repository = "https://github.com/jamesgober/mmap-io"
documentation = "https://docs.rs/mmap-io"
authors = [
    "James Gober <me@jamesgober.com>"
]


[dependencies]
memmap2 = "0.7"
tokio = { version = "1.38", features = ["fs", "io-util", "sync", "macros", "rt-multi-thread"], optional = true }
anyhow = "1.0"
parking_lot = "0.12"
log = "0.4"
thiserror = "1.0"
cfg-if = "1.0"
libc = { version = "0.2", optional = false }

[dev-dependencies]
# Benchmarking framework
criterion = { version = "0.5", default-features = false }
tempfile = "3"
# Property-based testing (0.9.6+). Pinned to a 1.x line that holds
# MSRV 1.75. Default features disabled to avoid pulling in `regex`
# extras we do not exercise; we opt back into the bits we need.
proptest = { version = "1.5", default-features = false, features = ["std", "bit-set", "fork", "timeout"] }

[features]
# Default opt-ins: safe to enable and provide value without platform privileges
default = ["advise", "iterator"]

# Optional features
async     = ["tokio"]     # Tokio-based async helpers
advise    = []            # Memory advise hints (madvise/posix_madvise, Prefetch on Windows)
iterator  = []            # Iterator-based access (chunks/pages)
hugepages = []            # Use MAP_HUGETLB / FILE_ATTRIBUTE_LARGE_PAGES
cow       = []            # Copy-on-Write mapping mode (private mappings)
locking   = []            # Lock / Unlock memory pages (mlock/munlock, VirtualLock)
atomic    = []            # Atomic memory views (u32/u64) with strict alignment checks
watch     = []            # Watch/Notification (inotify/kqueue/FSEvents/Windows; fallback polling)


[badges]
github-actions = { repository = "jamesgober/mmap-io", workflow = "CI" }
maintenance = { status = "actively-developed" }

# Criterion benches
[[bench]]
name = "mmap_bench"
harness = false

[package.metadata.docs.rs]
features = ["async"]
all-features = true