[package]
name = "mmap-io"
version = "0.9.11"
edition = "2021"
rust-version = "1.75"
readme = "README.md"
license = "Apache-2.0"
publish = true
description = "Zero-copy memory-mapped file I/O for Rust. Safe concurrent reads, writes, and atomic views across Linux, macOS, and Windows. Built for databases, log structures, game runtimes, caches, and IPC."
keywords = [
    "mmap",
    "memory-mapped",
    "zero-copy",
    "filesystem",
    "io"
]
categories = [
    "filesystem",
    "data-structures",
    "concurrency",
    "database-implementations"
]
homepage = "https://github.com/jamesgober/mmap-io"
repository = "https://github.com/jamesgober/mmap-io"
documentation = "https://docs.rs/mmap-io"
authors = [
    "James Gober <me@jamesgober.com>"
]


[dependencies]
memmap2 = "0.7"
# Runtime-agnostic spawn-blocking for the `async` feature. Was
# `tokio` through 0.9.10; switched to `blocking` in 0.9.11 so the
# async surface works on every executor (tokio, smol, async-std)
# instead of locking callers into tokio.
blocking = { version = "1", optional = true }
anyhow = "1.0"
parking_lot = "0.12"
log = "0.4"
thiserror = "1.0"
cfg-if = "1.0"
libc = { version = "0.2", optional = false }
# Native file-change watchers (inotify on Linux, FSEvents on macOS,
# ReadDirectoryChangesW on Windows). Optional; activated by the
# `watch` feature. Default features off to keep the dep tree tight.
notify = { version = "6", default-features = false, features = ["macos_fsevent"], optional = true }
# Optional `bytes::Bytes` integration. Enables `From<MappedSlice<'_>>`
# / `MemoryMappedFile::read_bytes` so the crate plugs into the
# hyper / tower / tonic / axum / reqwest ecosystem. Gated under the
# `bytes` feature so callers who don't need it pay zero compile cost.
bytes = { version = "1", optional = true }

[dev-dependencies]
# Benchmarking framework
criterion = { version = "0.5", default-features = false }
tempfile = "3"
# Tokio is a dev-only dep so the existing async tests (which use
# #[tokio::test]) continue to drive the runtime-agnostic async
# surface. Downstream users with `--features async` no longer get
# tokio in their tree; they get the `blocking` crate, which runs
# on any executor. This dev-dep does NOT affect downstream builds.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Property-based testing (0.9.6+). Pinned to a 1.x line that holds
# MSRV 1.75. Default features disabled to avoid pulling in `regex`
# extras we do not exercise; we opt back into the bits we need.
proptest = { version = "1.5", default-features = false, features = ["std", "bit-set", "fork", "timeout"] }

[features]
# Default opt-ins: safe to enable and provide value without platform privileges
default = ["advise", "iterator"]

# Optional features
async     = ["dep:blocking"] # Runtime-agnostic async helpers (works on tokio, smol, async-std)
bytes     = ["dep:bytes"] # Conversions to/from `bytes::Bytes` for the async-networking ecosystem
advise    = []            # Memory advise hints (madvise/posix_madvise, Prefetch on Windows)
iterator  = []            # Iterator-based access (chunks/pages)
hugepages = []            # Use MAP_HUGETLB / FILE_ATTRIBUTE_LARGE_PAGES
cow       = []            # Copy-on-Write mapping mode (private mappings)
locking   = []            # Lock / Unlock memory pages (mlock/munlock, VirtualLock)
atomic    = []            # Atomic memory views (u32/u64) with strict alignment checks
watch     = ["dep:notify"] # Native file-change notifications via `notify` (inotify on Linux, FSEvents on macOS, ReadDirectoryChangesW on Windows)


[badges]
github-actions = { repository = "jamesgober/mmap-io", workflow = "CI" }
maintenance = { status = "actively-developed" }

# Criterion benches
[[bench]]
name = "mmap_bench"
harness = false

# Focused examples (since 0.9.10). Each example demonstrates one
# concrete use case in <100 lines. Feature-gated examples use
# `required-features` so `cargo build --examples` skips them
# cleanly when the feature is off rather than erroring on a missing
# API.
[[example]]
name = "01_read_a_file"

[[example]]
name = "02_create_and_write"

[[example]]
name = "03_segment_views"

[[example]]
name = "04_atomic_counter"
required-features = ["atomic"]

[[example]]
name = "05_log_appender"

[[example]]
name = "06_chunked_processing"
required-features = ["iterator"]

[[example]]
name = "07_watch_for_changes"
required-features = ["watch"]

[[example]]
name = "08_huge_pages_simulation"
required-features = ["hugepages"]

[[example]]
name = "09_async_writes"
required-features = ["async"]

[[example]]
name = "10_ipc_shared_state"
required-features = ["atomic"]

[package.metadata.docs.rs]
features = ["async"]
all-features = true